# Trab2_prog3

./: .gitignore  CMakeLists.txt  Candidato.cpp  Candidato.h  DateUtils.cpp  Eleicao.cpp  Eleicao.h  ExLeituraPartido.cpp  Leitura.h  Makefile  Partido.cpp  Partido.h  Pessoa.cpp  Pessoa.h  README.md  Relatorio.cpp  StringUtils.h  Verificador.cpp  Votos.cpp  Votos.h  main.cpp  script.sh  teste.cpp
Trabalho/: Candidato.cpp  Candidato.h  Eleicao.cpp  Eleicao.h  ExLeituraCandidato.cpp  Leitura.cpp  Leitura.h  Makefile  Partido.cpp  Partido.h  Pessoa.cpp  Pessoa.h  Relatorio.cpp  Relatorio.h  Votos.cpp  Votos.h  main.cpp
entradas/: a.csv  teste-candidatos.csv  teste2-candidatos.csv  testeUTF-candidatos.csv
include/: Candidato.h  DateUtils.h  Eleicao.h  Erros.h  Leitura.h  Partido.h  Pessoa.h  Relatorio.h  Verificador.h  Votos.h
include/Excecoes/: ExLeituraCandidato.h  ExLeituraPartido.h
output/: PartidoCandidatoTrocadosC.txt  saidaAnchieta.txt  saidaDivino.txt  saidaDomingos.txt  saidaMarilandia.txt  saidaSemData.txt  saidaTeste1.txt  saidaTeste2.txt  saidaTeste3.txt  saidaTrocada.txt  testeAnchieta.txt  testeData.txt  testeDivinoSaoLourencoC.txt  testeDomingosMartins.txt  testeMarilandia.txt  testeTeste2Panca.txt  testeTeste3Panca.txt  testeTesteUTFPanca.txt
src/: Candidato.cpp  DateUtils.cpp  Eleicao.cpp  Erros.cpp  Leitura.cpp  Partido.cpp  Pessoa.cpp  Relatorio.cpp  StringUtils.cpp  Verificador.cpp  Votos.cpp  main.cpp
src/Excecoes/: ExLeituraCandidato.cpp  ExLeituraPartido.cpp
